<resources>
    <string name="app_name">ashukla2-MyBookWishlist</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_main">My Book Wishlist</string>

    <string name="title_add_book">Add Book</string>
    <string name="title_edit_book">Edit Book</string>
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_publication_year">Publication Year</string>
    <string name="hint_read_status">Read Status</string>
    <string name="read_status_read">Read</string>
    <string name="read_status_unread">Unread</string>

    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="add_book">Add Book</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_year">Invalid year</string>

    <string name="desc_add_button">Add new book</string>
    <string name="author">Author</string>
    <string name="title">  Title</string>
    <string name="genre">Genre</string>
    <string name="publication_year">Publication Year</string>
    <string name="read_status">Read Status (Read/Unread)</string>
    <string name="search_title">search</string>
    <string name="year">Year</string>
    <string name="delete">delete</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>

</resources>