<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sea"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/title"
        android:inputType="textCapWords"
        android:maxLength="50"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/butter"
        android:textColorHighlight="@color/butter"
        android:textColorHint="@color/butter"
        app:layout_constraintBottom_toTopOf="@id/edit_text_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/author"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/butter"
        android:textColorHighlight="@color/butter"
        android:textColorHint="@color/butter"
        app:layout_constraintBottom_toTopOf="@id/edit_text_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_title" />

    <EditText
        android:id="@+id/edit_text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/genre"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/butter"
        android:textColorHighlight="@color/butter"
        android:textColorHint="@color/butter"
        app:layout_constraintBottom_toTopOf="@id/edit_text_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_author" />

    <EditText
        android:id="@+id/edit_text_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/publication_year"
        android:inputType="number"
        android:maxLength="4"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/butter"
        android:textColorHighlight="@color/butter"
        android:textColorHint="@color/butter"
        app:layout_constraintBottom_toTopOf="@id/edit_text_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_genre" />

    <RadioGroup
        android:id="@+id/edit_text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_year">

        <RadioButton
            android:id="@+id/status_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/read"
            android:textColor="@color/butter" />

        <RadioButton
            android:id="@+id/status_unread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/unread"
            android:textColor="@color/butter" />
    </RadioGroup>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_status" />

</androidx.constraintlayout.widget.ConstraintLayout>
