<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:background="@color/sea"
        android:text="Title"
        android:textColor="@color/butter"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/palm"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre"
            android:textColor="@color/palm"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/book_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year"
            android:textAlignment="viewEnd"
            android:textColor="@color/palm"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/book_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/organic"
        android:textSize="20sp" />


</LinearLayout>